src/app/order-success/order-success.component.css
.container-top {
  margin-top: 90px;
}
.pb-5,
.py-5 {
  padding-bottom: 0px !important;
}

.pt-5,
.py-5 {
  padding-top: 0px !important;
}

.pl-3,
.px-3 {
  padding-left: 2rem !important;
}

.pl-3,
.px-3 {
  padding-right: 2rem !important;
}

.row {
  margin-left: 5px !important;
  margin-right: 5px !important;
}

.col-lg-12 {
  margin-bottom: 30px;
}

h1 {
  margin-top: 0.5rem !important;
  margin-bottom: 0.5rem !important;
}

body {
  color: #000;
  overflow-x: hidden;
  height: 100%;
  background-color: #2ecc71;
  background-repeat: no-repeat;
}

.card {
  z-index: 0;
  background-color: #eceff1;
  padding-bottom: 20px;
  margin-top: 20px;
  border-radius: 30px;
}

.top {
  padding-top: 40px;
  padding-left: 13% !important;
  padding-right: 13% !important;
}

#progressbar {
  margin-bottom: 30px;
  overflow: hidden;
  color: #455a64;
  padding-left: 0px;
  margin-top: 30px;
}

#progressbar li {
  list-style-type: none;
  font-size: 13px;
  width: 20%;
  float: left;
  position: relative;
  font-weight: 400;
}

#progressbar .step0:before {
  font-family: FontAwesome;
  /* content: "\f10c"; */
  content: "🗸";
  color: #fff;
}

#progressbar li:before {
  width: 40px;
  height: 40px;
  line-height: 45px;
  display: block;
  font-size: 20px;
  background: #c5e9d0;
  border-radius: 50%;
  margin: auto;
  padding: 0px;
}

#progressbar li:after {
  content: "";
  width: 100%;
  height: 12px;
  background: #c5e9d0;
  position: absolute;
  left: 0;
  top: 16px;
  z-index: -1;
}

#progressbar li:last-child:after {
  border-top-right-radius: 10px;
  border-bottom-right-radius: 10px;
  position: absolute;
  left: -50%;
}

#progressbar li:nth-child(2):after,
#progressbar li:nth-child(3):after,
#progressbar li:nth-child(4):after {
  left: -50%;
}

#progressbar li:first-child:after {
  border-top-left-radius: 10px;
  border-bottom-left-radius: 10px;
  position: absolute;
  left: 50%;
}

#progressbar li:last-child:after {
  border-top-right-radius: 10px;
  border-bottom-right-radius: 10px;
}

#progressbar li:first-child:after {
  border-top-left-radius: 10px;
  border-bottom-left-radius: 10px;
}

#progressbar li.active:before,
#progressbar li.active:after {
  background: #24df88;
}

#progressbar li.active:before {
  font-family: FontAwesome;
  /* content: "\f00c"; */
  content: "🗸";
}

.rounded-circle {
  margin-right: 20px;
}

.icon {
  width: 60px;
  height: 60px;
  margin-right: 15px;
}

.icon-content {
  padding-bottom: 20px;
}

@media screen and (max-width: 992px) {
  .icon {
    width: 25px;
    height: 25px;
    margin-right: 10px;
  }

  .icon-content {
    width: 5%;
  }
}

@media screen and (max-width: 650px) {
  .justify-content-between {
    justify-content: space-around !important;
  }

  .font-weight-bold {
    display: none;
  }
}

